<resources>
    <string name="app_name">Raid Go Planner</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="tab_text_1">Mapa</string>
    <string name="tab_text_2">Amigos</string>
    <string name="tab_text_3">Ajustes</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="a_adir_amigo">Añadir amigo</string>
    <string name="nombre_de_usuario_o_email">Nombre de usuario o email</string>
    <string name="sonido">Sonido</string>
    <string name="ayuda">Ayuda</string>
    <string name="perfil">Perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="equipo">Equipo:</string>
    <string name="pokemon">Pokemon</string>
    <string name="pokemon_de_raid">Pokemon de Raid</string>
    <string name="crear_raid">Crear Raid</string>
    <string-array name="examples">
        <item>-Con esta aplicación podrás organizar raids desde casa! No vuelvas a ir a una tontamente y al llegar, ver que solo estas tú y que no puedes hacerla.</item>
        <item>-En el mapa, presiona durante unos segundos para crear un evento de Raid. Podrás poner el pokemon de la raid y la hora a la que empezar, así como eliminarla.</item>
        <item>-Únete a las raids que hayan creado otros jugadores clicando en las marcas. Veras cuanta gente se ha apuntado, de que equipo es cada uno y desapuntarte si no te acaba convenciendo.</item>
        <item>-Añade a amigos que utilicen esta aplicación. Ve al apartado de amigos y añadelos usando su email o su nombre de usuario.</item>
    </string-array>
</resources>
